Make it working after publish

--- a/Build_IT_CalculationModule/Build_IT_CalculationModule.csproj
+++ b/Build_IT_CalculationModule/Build_IT_CalculationModule.csproj
@@ -6,6 +6,7 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon />
     <StartupObject />
+    <Configurations>Debug;Release;DEVTEST;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
