--- a/Build_IT_CommonToolsTests/Build_IT_CommonToolsTests.csproj
+++ b/Build_IT_CommonToolsTests/Build_IT_CommonToolsTests.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
 
     <ApplicationIcon />
+
+    <Configurations>Debug;Release;DEVTEST;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
