--- a/Build_IT_BeamStatica/Build_IT_BeamStatica.csproj
+++ b/Build_IT_BeamStatica/Build_IT_BeamStatica.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <Configurations>Debug;Release;DEVTEST;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
