--- a/Build_IT_Infrastructure/Build_IT_Infrastructure.csproj
+++ b/Build_IT_Infrastructure/Build_IT_Infrastructure.csproj
@@ -6,6 +6,7 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon />
     <StartupObject />
+    <Configurations>Debug;Release;DEVTEST;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
