--- a/Build_IT_Reports/Build_IT_Reports.csproj
+++ b/Build_IT_Reports/Build_IT_Reports.csproj
@@ -5,6 +5,7 @@
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
     <StartupObject />
+    <Configurations>Debug;Release;DEVTEST;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
