--- a/Build_IT_SnowLoad/Build_IT_SnowLoads.csproj
+++ b/Build_IT_SnowLoad/Build_IT_SnowLoads.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Configurations>Debug;Release;DEVTEST;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
