--- a/Build_IT_Web/ClientApp/angular.json
+++ b/Build_IT_Web/ClientApp/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "progress": true,
+            "progress": false,
             "extractCss": true,
             "outputPath": "dist",
             "index": "src/index.html",
@@ -76,7 +76,7 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "styles.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
