--- a/Build_IT_Web/ClientApp/package.json
+++ b/Build_IT_Web/ClientApp/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/cdk": "^8.2.1",
+    "@angular/animations": "^8.2.12",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "8.0.0",
     "@angular/forms": "8.0.0",
     "@angular/http": "7.2.15",
-    "@angular/material": "^8.2.1",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/platform-server": "8.0.0",
@@ -34,7 +34,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.0",
-    "popper.js": "^1.14.3",
+    "popper.js": "^1.16.0",
     "rxjs": "^6.4.0",
     "zone.js": "~0.9.1"
   },
@@ -43,15 +43,15 @@
     "@angular/cli": "8.0.6",
     "@angular/compiler-cli": "8.0.0",
     "@angular/language-service": "8.0.0",
-    "@types/jasmine": "~3.3.9",
-    "@types/jasminewd2": "~2.0.6",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^11.10.6",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "typescript": "3.4.5"
