--- a/Build_IT_WebTest/Build_IT_WebTest.csproj
+++ b/Build_IT_WebTest/Build_IT_WebTest.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Configurations>Debug;Release;DEVTEST;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
