--- a/Build_IT_DataAccess/Build_IT_DataAccess.csproj
+++ b/Build_IT_DataAccess/Build_IT_DataAccess.csproj
@@ -26,6 +26,8 @@
     <Compile Remove="ScriptInterpreter\Migrations\20191019082134_GroupNameRemovedFromParameterScriptIdAddedToGroup.Designer.cs" />
     <Compile Remove="ScriptInterpreter\Migrations\20191019082859_GroupNameRemovedFromParameterScriptIdAddedToGroup.cs" />
     <Compile Remove="ScriptInterpreter\Migrations\20191019082859_GroupNameRemovedFromParameterScriptIdAddedToGroup.Designer.cs" />
+    <Compile Remove="ScriptInterpreter\Migrations\20191029223013_TestDataAdded.cs" />
+    <Compile Remove="ScriptInterpreter\Migrations\20191029223013_TestDataAdded.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
