--- a/Build_IT_CalculationModule/Build_IT_CalculationModule.csproj
+++ b/Build_IT_CalculationModule/Build_IT_CalculationModule.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CoreCLR-NCalc" Version="2.2.70" />
     <PackageReference Include="Prism.Core" Version="7.2.0.1367" />
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1367" />
     <PackageReference Include="Unity" Version="5.11.1" />
