--- a/Build_IT_Web/ClientApp/package.json
+++ b/Build_IT_Web/ClientApp/package.json
@@ -29,10 +29,12 @@
     "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "ng2-charts": "^2.2.4",
     "oidc-client": "^1.9.0",
     "popper.js": "^1.16.0",
     "rxjs": "^6.4.0",
