--- a/Build_IT_Data/Build_IT_Data.csproj
+++ b/Build_IT_Data/Build_IT_Data.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Build_IT_CommonTools\Build_IT_CommonTools.csproj" />
   </ItemGroup>
 
